@@ -1,5 +1,12 @@
 2007-02-24  Vitaly Alexeev <tishka92@yahoo.com>
 
+	* gameswf/gameswf_text.cpp,
+	* gameswf/gameswf_impl.(cpp,h),
+	fixed KILL_FOCUS bug,
+	We cannot use get_parent() because parent may not be any more
+	
+2007-02-24  Vitaly Alexeev <tishka92@yahoo.com>
+
 	* gameswf/gameswf_action.(cpp,h),
 	* gameswf/gameswf_impl.(cpp,h),
 	* gameswf/gameswf.h,
